# lumpyspace

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  TASKS.md  pyproject.toml  test_multi_opt.py
docs/: Verbatim Transcript_ Inhomogeneous Cosmology & ML Dialogue.md  bao_integration_design.md  blog_post_2_draft.md  blog_post_3_draft.md  blog_post_4_draft.md  blog_post_5_draft.md  blog_post_tabula_rasa.md  monitor_training.md  technical_design.md  trainable_matter_theory.md
notebooks/: monitor_training.ipynb
scripts/: download_pantheon.py  generate_bao_data.py  generate_mock_flrw.py
src/core/: metric.py  tensors.py
src/physics/: geodesics.py
src/training/: checkpoint.py  constraints.py  data.py  loss.py  run.py  scheduler.py  trainer.py
tests/1.unit/: test_checkpoint.py  test_cmb_loss.py  test_data.py  test_geodesics.py  test_loss.py  test_metric.py  test_scheduler.py
tests/2.integration/: test_control_training.py
tests/integration/: test_control_training.py  test_data_ingestion.py  test_geodesic_integration.py  test_gradients.py
tests/unit/: test_data.py  test_geodesics.py  test_loss.py  test_metric.py  test_tensors.py
